Fixed bugs with mouse hover in cards, header jumping, first row in search out of bounds. Added message when loading card details

--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -1,6 +1,7 @@
 .AppHeader {
   background: rgb(0, 0, 0);
   color: white;
+  height: 70px;
   width: 100%;
 }
 
