--- a/src/components/MovieGrid/MovieGrid.scss
+++ b/src/components/MovieGrid/MovieGrid.scss
@@ -1,10 +1,18 @@
 .movieGrid {
+  margin: 0 auto;
   overflow: hidden;
   position: relative;
+  width: 90vw;
+}
+
+.title {
+  font-size: 1.5vw;
+  color: white;
+  margin-bottom: 10px;
 }
 
 .group {
-  margin: 0 auto 30px;
+  margin-bottom: 30px;
   width: 90vw;
 }
 
